[package]
name = "motor_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "motor_cli"
path = "src/main.rs"

[dependencies]
motor_core = { path = "../motor_core" }
motor_vendor_damiao = { path = "../motor_vendors/damiao" }
motor_vendor_robstride = { path = "../motor_vendors/robstride" }
motor_vendor_robstride_cia402 = { path = "../motor_vendors/robstride_cia402" }
motor_vendor_robstride_mit = { path = "../motor_vendors/robstride_mit" }
motor_vendor_myactuator = { path = "../motor_vendors/myactuator" }
motor_vendor_hexfellow = { path = "../motor_vendors/hexfellow" }
