[package]
name = "motor_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
test-support = []

[lib]
name = "motor_core"
path = "src/lib.rs"

[dependencies]
libloading = "0.8"
serialport = { version = "4.6", default-features = false }

[build-dependencies]
cc = "1"

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.8"
